# autorag

./: .ai-factory.json  .env.example  .gitignore  AGENTS.md  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  test_pmbok_ingestion.py
.ai-factory/: DESCRIPTION.md
.github/workflows/: ci.yml
.kilocode/rules/: commit-practices.md  pmbok-structure-rules.md
.kilocode/rules-architect/: AGENTS.md
.kilocode/rules-ask/: AGENTS.md
.kilocode/rules-code/: AGENTS.md
.kilocode/rules-debug/: AGENTS.md
.omx/: notepad.md
.omx/plans/: autopilot-impl.md  autopilot-spec.md
.omx/state/: autopilot-state.json
app/: __init__.py  components.py  streamlit_app.py  styles.css
app/components/: __init__.py  answer_card.py  arxiv_panel.py  citation_tabs.py  document_manager.py  empty_state.py  model_selector.py  question_bar.py  sidebar.py  (+2 more)
configs/: base.yaml  demo_fixture_pack.yaml  logging.yaml
data/: .gitignore
docs/: architecture.md  milestones.md  runbook.md  schemas.md
plans/: 2026-02-14_full-repo-code-review.md  2026-02-14_ollama-integration.md  2026-02-14_pmbok-graph-strategy.md  2026-02-14_pmbok_ingestion_and_multimodal.md  2026-02-14_streamlit-frontend-redesign.md  2026-02-14_vector-store-management-and-arxiv.md  README.md  code_review.md  ollama-cloud-api-key.md
reports/: known_good_run_snapshot.template.md
scripts/: bootstrap_sample_data.sh  normalize_pmbok_paragraphs.py  run_m1_smoke.sh  run_m2_pipeline.sh  run_m3_pipeline.sh  run_m4_pipeline.sh  run_m5_eval.sh  run_m6_demo.sh  run_m6_demo_ollama.sh  run_m6_demo_smoke.sh
(+179 files in other folders)
